--- a/Hoang.css
+++ b/Hoang.css
@@ -7,6 +7,12 @@
     
 }
 
+.carousel-control-prev-icon, .carousel-control-next-icon {
+    border-radius: 10px;
+    padding: 30px 5px;
+    background-color: #a2a2a2;
+}
+
 .tong1{
     display: flex;
 }
