--- a/Hoang.css
+++ b/Hoang.css
@@ -10,7 +10,7 @@
 .carousel-control-prev-icon, .carousel-control-next-icon {
     border-radius: 10px;
     padding: 30px 5px;
-    background-color: #a2a2a2;
+    background-color: #b3b3b354;
 }
 
 .tong1{
@@ -28,22 +28,22 @@
 }
 
 #demo{
-    width: 60%;
+    width: 70%;
 }
 
-.carousel-item img{
+#demo .carousel-item img{
     height: 240px;
     margin-right: 10px;
 }
 
 .tong2phai {
-    width: 40%;
+    width: 30%;
+    margin-left: 10px;
 }
 
 .tong2phai img{
     width: 100%;
-    height: 120px;
-    
+    height: 120px;    
 }
 .tong3{
     margin-top: 20px;
