--- a/Thang.css
+++ b/Thang.css
@@ -16,8 +16,14 @@ li a {
 }
 
 .header-top-bar {
-    width: 100%;
+    width: 1350px;
     height: 44px;
+    margin: 0 auto;
+}
+
+#topdemo {
+    width: 100%;
+    height: 30px;
 }
 
 .header-top-bar img {
