--- a/Thang.css
+++ b/Thang.css
@@ -145,25 +145,29 @@ nav ul li:nth-child(4) {
     text-align: center;
 }
 
-nav ul li:nth-child(5) {
+.shopping {
     background-color: #FFAC0A99;
     border-radius: 5px;
     padding: 0 3px;
-    max-width: 100px;
+    min-width: 92px;
     text-align: center;
+    display: flex;
+    align-items: center;
+    padding: 0 5px;
 }
 
-nav ul li:nth-child(5) a{
+.shopping a{
     display: flex;
     flex-wrap: wrap;
     align-content: center;
     align-items: center;
 }
 
-nav ul li:nth-child(5) a p {
+.shopping p {
     font-weight: 600;
     font-size: 12px;
     margin-left: 5px;
+    margin-bottom: 0;
 }
 
 nav ul li:nth-child(5) i {
@@ -355,4 +359,108 @@ li {
     color: black;
     font-weight: bold;
     transition: 0.5;
+}
+
+/* -----------------------------Giỏ hàng css------------------- */
+.shopping{
+    position: relative;
+    text-align: right;
+    cursor: pointer;
+}
+
+.shopping span{
+    background: red;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    position: absolute;
+    top: -15px;
+    left: 8%;
+    padding: 3px 10px;
+}
+
+/* ----------------------------Cart----------------------------- */
+.card1{
+    z-index: 3;
+    position: fixed;
+    top:0;
+    left: 100%;
+    width: 500px;
+    background-color: #453E3B;
+    height: 50%;
+    transition: 0.5s;
+}
+.active .card1{
+    left: calc(100% - 500px);
+}
+.active .container{
+   transform: translateX(-200px);
+}
+.card1 h1{
+    color: #E8BC0E;
+    font-weight: 100;
+    margin: 0;
+    padding: 0 20px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    font-size: 35px;
+}
+.card1 .checkOut{
+    position: relative;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+}
+.button1 {
+    background-color: #ddd;
+    text-decoration: none;
+    border-radius: 0 0 5px 5px;
+    font-size: 16px;
+    padding: 3px;
+    text-align: center;
+  }
+.card1 .checkOut div{
+    background-color: #E8BC0E;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+.card1 .checkOut div:nth-child(2){
+    background-color: #1C1F25;
+    color: #fff;
+}
+
+.listCard {
+    height: 70%;
+    overflow-y: auto;
+}
+.listCard li{
+    display: grid;
+    grid-template-columns: 100px repeat(3, 1fr);
+    color: #fff;
+    row-gap: 10px;
+}
+.listCard li div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.listCard li img{
+    width: 90%;
+    margin: 5px 0;
+}
+.listCard li button{
+    background-color: #fff5;
+    border: none;
+}
+.listCard .count{
+    margin: 0 10px;
 }
