--- a/card_product.css
+++ b/card_product.css
@@ -56,8 +56,10 @@ body {
     color: blue;
     display: flex;
 }
-.top-content p {
+.top-content a {
     color: blue;
+    text-decoration: none;
+    font-size: 14px;
 }
 
 .top-content {
