--- a/Hoang.css
+++ b/Hoang.css
@@ -45,6 +45,80 @@
     width: 100%;
     height: 120px;    
 }
+.bodershow{
+    width: 747px;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.bodershow img{
+    display: flex;
+    width: auto;
+    max-height: 25px;
+    max-width: 98%;
+    object-fit: contain;
+    justify-content: center;
+}
+.bodershow1{
+    width: 650px;
+    display: flex;
+    flex-wrap: wrap;
+}
+/* Style cho dropdown container */
+.dropdown {
+    position: relative;
+    display: inline-block;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    
+  }
+  
+  /* Style cho button mở dropdown */
+  .dropbtn {
+    background-color: #f1f1f1;
+    color: black;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    border-radius: 8px;
+  }
+  
+  /* Style cho nội dung dropdown */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    z-index: 1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  /* Style cho các mục trong dropdown */
+  .dropdown-content a {
+    
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    /* color: black; */
+  }
+  
+  /* Khi rê chuột lên một mục, thay đổi màu nền */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Hiển thị dropdown khi hover vào button */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Tùy chỉnh padding và margins cho mục li trong dropdown */
+  .tong3 li {
+    border: 1px solid black;
+    margin: 5px;
+    padding: 5px;
+    color: black;
+  }
 .tong3{
     margin-top: 20px;
     display: flex;
