--- a/card_product.css
+++ b/card_product.css
@@ -77,6 +77,37 @@ body {
     justify-content: space-between;
     align-items: center;
 }
+.TTKH{
+    border-top: 1px solid #ddd;
+}
+.baoboc{
+    width: 500px;
+    height: 80px;
+    border: 1px solid rgb(246, 246, 246);
+    background-color: rgb(246, 246, 246);
+    margin-top: 10px;
+   
+}
+
+.baoboc p {
+    margin-left: 10px;
+}
+.baoboc select {
+    margin-left: 7  px;
+}
+.pn input{
+    width: 220px;
+    height: 30px;
+}
+.YC input{
+    width: 480px;
+    height: 30px;
+}
+.Khac{
+    width: 350px;
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .card-bottom {
     width: 100%;
@@ -131,4 +162,43 @@ body {
 .card-bottom .btn-tragop span {
     font-size: 11px;
     font-weight: normal;
+}
+
+
+.MGG{
+    width: 200px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.sudung{
+    border: 1px solid gray;
+    width: 200px;
+    padding-left: 20px;
+}
+.MGG a{
+    text-decoration: none;
+    color: #000000;
+    width: 200px;
+}
+.nhapma{
+    margin-top: 10px;
+    width: 500px;
+    height: 40px;
+    border: 1px solid gray;
+    background-color: rgb(241, 241, 241);
+}
+.nhapma input{
+    margin: 7px 10px;
+    width: 300px;
+    height: 20px;
+}
+
+.nut input{
+    position: relative;
+    left: 370px;
+    top: -36px;
+    width: 100px;
+    height: 30px;
+    border-radius: 8px;
+    background-color: rgb(188, 188, 188);
 }
