--- a/Thang.css
+++ b/Thang.css
@@ -76,6 +76,16 @@ body {
     min-height: 40px;
 }
 
+.header nav ul li div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header nav ul li div a {
+    font-size: 14px;
+}
+
 .header nav ul {
     margin: 0;
     padding: 0;
